--- a/config/module.ini
+++ b/config/module.ini
@@ -1,5 +1,5 @@
 [info]
-name 		      = "text Embed"
+name 		      = "TEXT Embed"
 description   = "Embed files text"
 tags 		      = "text,txt"
 author 		    = "Jiangning Lin"
