--- a/config/module.ini
+++ b/config/module.ini
@@ -1,6 +1,6 @@
 [info]
 name 		      = "TEXT Embed"
-description   = "Embed files text"
+description   = "Embed files text within Omeka S pages"
 tags 		      = "text,txt"
 author 		    = "Jiangning Lin"
 author_link   = "https://github.com/JiangningLIN"
